--- a/blog/composer.json
+++ b/blog/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.5",
+        "php-open-source-saver/jwt-auth": "^2.2",
         "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
